[package]
name = "webrtc"
version = "0.0.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/simmons/webrtc"
keywords = ["webrtc" ]
categories = ["network-programming"]
description = "[WIP] A Rust implementation of WebRTC"
readme = "README.md"

[dependencies]
webrtc-media = "0.0.0"
webrtc-data = "0.0.0"
